--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </div>
 </div>  <!-- todo:общая оболочка, чтобы не появлялся горизонтальный скролл -->
   <div class="wrapper">
-
+    <h1>Заголовок</h1>
   </div>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/vendors.js"></script>
