добавлени блок search

--- a/index.html
+++ b/index.html
@@ -94,6 +94,32 @@
         </div>
       </div>
     </header>
+    <section class="search">
+      <div class=" container">
+        <div class="search__inner">
+          <div class="search__title">
+            <h1>Welcome To Foxtar Market Place!</h1>
+          </div>
+          <div class="search__text">
+            <p>
+              Premium WordPress Themes, Web Templates and Many More ...
+            </p>
+          </div>
+          <div class="search__form">
+            <form>
+              <input type="text" placeholder="Search Your Keywords . . ." required>
+              <button type="submit">
+                <img src="img/moderno/search.png" alt="">
+              </button>
+            </form>
+          </div>
+
+        </div>
+      </div>
+      <div class="search__image ibg">
+        <img src="img/moderno/bg_search.jpg" alt="изображение">
+      </div>
+    </section>
   </div>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/vendors.js"></script>
