Добавлены секции author

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <link rel="stylesheet" href="css/aos.css">
+  <link rel="stylesheet" href="css/lineicons.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Moderno</title>
 </head>
@@ -674,6 +675,90 @@
                 <div class="item__star">(05)</div>
               </div>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="advantages">
+      <div class="container">
+        <h2 class="advantages__title title">Why You Choose Foxtar Market Place?</h2>
+        <div class="advantages__row">
+          <div class="advantages__column">
+            <div class="advantages__item">
+              <div class="advantages__icon">
+                <i class="lni lni-lock-alt"></i>
+              </div>
+              <h3 class="advantages__subtitle">Easily Buy & Sell</h3>
+              <div class="advantages__text">
+                <p>
+                  Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the
+                  industry's standaum.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="advantages__column">
+            <div class="advantages__item">
+              <div class="advantages__icon">
+                <i class="lni lni-gift"></i>
+              </div>
+              <h3 class="advantages__subtitle">Quality Products</h3>
+              <div class="advantages__text">
+                <p>
+                  Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the
+                  industry's standaum.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="advantages__column">
+            <div class="advantages__item">
+              <div class="advantages__icon heart">
+                <i class="lni lni-heart"></i>
+              </div>
+              <h3 class="advantages__subtitle">100% Secure Payment</h3>
+              <div class="advantages__text">
+                <p>
+                  Dorem Ipsum is simply dummy text of the pring and typesetting industry. Lorem Ipsum has been the
+                  industry's standaum.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="author">
+      <div class="author__box">
+        <div class="author__title">Over <span>20,000</span> Author
+          Are Involved Here!</div>
+        <a class="author__link" href="#">Become A Author</a>
+      </div>
+      <div class="author__image ibg">
+        <img src="img/moderno/foto-bg.jpg" alt="">
+      </div>
+    </section>
+    <section class="tutorial">
+      <div class="container">
+        <h2 class="tutorial__title title">Free Monthly Tutorials To Help You With Your Project</h2>
+        <div class="tutorial__row">
+          <div class="tutorial__item">
+            <div class="tutorial__image ibg">
+              <img src="img/moderno/13.jpg" alt="">
+            </div>
+            <div class="tutorial__descr">Web Design Tutorials</div>
+          </div>
+          <div class="tutorial__item">
+            <div class="tutorial__image ibg">
+              <img src="img/moderno/14.jpg" alt="">
+            </div>
+            <div class="tutorial__descr">WordPress Tutorials</div>
+          </div>
+          <div class="tutorial__item">
+            <div class="tutorial__image ibg">
+              <img src="img/moderno/15.jpg" alt="">
+            </div>
+            <div class="tutorial__descr">HTML & CSS Tutorials</div>
           </div>
         </div>
       </div>
