--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0" /> -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <link rel="stylesheet" href="css/aos.css">
-  <link rel="stylesheet" href="css/lineicons.css">
+  <link rel="stylesheet" href="css/icomoon.css">
+  <link rel="stylesheet" href="css/css-sprites.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Moderno</title>
 </head>
@@ -686,7 +687,7 @@
           <div class="advantages__column">
             <div class="advantages__item">
               <div class="advantages__icon">
-                <i class="lni lni-lock-alt"></i>
+                <i class="icon-lock"></i>
               </div>
               <h3 class="advantages__subtitle">Easily Buy & Sell</h3>
               <div class="advantages__text">
@@ -700,7 +701,7 @@
           <div class="advantages__column">
             <div class="advantages__item">
               <div class="advantages__icon">
-                <i class="lni lni-gift"></i>
+                <i class="icon-gift"></i>
               </div>
               <h3 class="advantages__subtitle">Quality Products</h3>
               <div class="advantages__text">
@@ -714,7 +715,7 @@
           <div class="advantages__column">
             <div class="advantages__item">
               <div class="advantages__icon heart">
-                <i class="lni lni-heart"></i>
+                <i class="icon-heart-o"></i>
               </div>
               <h3 class="advantages__subtitle">100% Secure Payment</h3>
               <div class="advantages__text">
@@ -763,6 +764,105 @@
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__row">
+          <div class="footer__column">
+            <div class="footer__item">
+              <div class="footer__title footer-title">About Company</div>
+              <div class="footer__content">
+                <div class="footer__text">
+                  <p>
+                    Praesent vel rutrum purus. Nam vel dui eu risus duis dignissim digniSuspen disse.Fusce sit amet urna
+                    iat.Praesent vel
+                    rutrum purus.
+                  </p>
+                </div>
+                <div class="footer__contacts">
+                  <a class="footer__marker" href="#">PO Box 16122 Collins Street West
+                    Victoria 8007 Australia </a>
+                  <a class="footer__phone" href="tel:61383766284">+61 3 8376 6284</a>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer__column">
+            <div class="footer__item">
+              <div class="footer__title footer-title">Join Our Community</div>
+              <nav class="footer__menu">
+                <ul class="footer__list">
+                  <li><a class="footer__link" href="#">Home</a></li>
+                  <li><a class="footer__link" href="#">Forums</a></li>
+                  <li><a class="footer__link" href="#">Become an Author</a></li>
+                  <li><a class="footer__link" href="#">Community Meetups</a></li>
+                  <li><a class="footer__link" href="#">Become an Affiliate</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="footer__column">
+            <div class="footer__item">
+              <div class="footer__title footer-title">Need Help?</div>
+              <nav class="footer__menu">
+                <ul class="footer__list">
+                  <li><a class="footer__link" href="#">Help Center</a></li>
+                  <li><a class="footer__link" href="#">Foxtar Market Terms</a></li>
+                  <li><a class="footer__link" href="#">Author Terms</a></li>
+                  <li><a class="footer__link" href="#">Foxtar Licenses</a></li>
+                  <li><a class="footer__link" href="#">Contact Us</a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+          <div class="footer__column">
+            <div class="footer__item">
+              <div class="footer__title footer-title">Follow Us On</div>
+              <div class="footer__social">
+                <ul class="social__link">
+                  <li><a class="css-sprite-social1" href="#"></a></li>
+                  <li><a class="css-sprite-social2" href="#"></a></li>
+                  <li><a class="css-sprite-social3" href="#"></a></li>
+                  <li><a class="css-sprite-social4" href="#"></a></li>
+                  <li><a class="css-sprite-social5" href="#"></a></li>
+                  <!-- <li><a href="#">
+                      <img src="img/moderno/social1.png" alt="">
+                    </a></li>
+                  <li><a href="#">
+                      <img src="img/moderno/social2.png" alt="">
+                    </a></li>
+                  <li><a href="#">
+                      <img src="img/moderno/social3.png" alt="">
+                    </a></li>
+                  <li><a href="#">
+                      <img src="img/moderno/social4.png" alt="">
+                    </a></li>
+                  <li><a href="#">
+                      <img src="img/moderno/social5.png" alt="">
+                    </a></li> -->
+                </ul>
+              </div>
+              <div class="footer__email">
+                <div class="email__title">Newsletter Sign Up!</div>
+                <form action="#">
+                  <input type="text" placeholder="E-mail Address">
+                  <button type="submit"></button>
+                </form>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+
+  </div>
+  <div class="footer__bottom">
+    <div class="container">
+      <div class="footer__copy">
+        © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners
+      </div>
+    </div>
+  </div>
+  </footer>
   </div>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/vendors.js"></script>
