Добавлены выпадающие меню в хедере

--- a/index.html
+++ b/index.html
@@ -61,9 +61,147 @@
               <a href="tel:61383766284">+61 3 8376 6284</a>
             </div>
             <div class="header__box">
-              <a class="basket" href="#"></a>
-              <a class="header__btn header__btn_green" href="#">Login</a>
-              <a class="header__btn header__btn_red" href="#">Register</a>
+              <div class="notification__box">
+                <a class="notification header__circle active icon-bell-o" href="#">
+                  <span>8</span>
+                </a>
+                <div class="notification__menu">
+                  <div class="notification__item">
+                    <a href="#" class="notification__image">
+                      <img src="../img/moderno/чел 3.png" alt="">
+                    </a>
+                    <div class="notification__content">
+                      <a href="#" class="notification__help">Need WP Help!</a>
+                      <div class="notification__date">01 Dec, 2016</div>
+                    </div>
+                    <a href="#" class="notification__icon active"><i class="icon-bell-o"></i></a>
+                  </div>
+                  <div class="notification__item">
+                    <a href="#" class="notification__image">
+                      <img src="../img/moderno/чел 4.png" alt="">
+                    </a>
+                    <div class="notification__content">
+                      <a href="#" class="notification__help">Need WP Help!</a>
+                      <div class="notification__date">26 Nov, 2016</div>
+                    </div>
+                    <a href="#" class="notification__icon"><i class="icon-bell-o"></i></a>
+                  </div>
+                  <div class="notification__item">
+                    <a href="#" class="notification__image">
+                      <img src="../img/moderno/чел 5.png" alt="">
+                    </a>
+                    <div class="notification__content">
+                      <a href="#" class="notification__help">Psd Template Help!</a>
+                      <div class="notification__date">26 Nov, 2016</div>
+                    </div>
+                    <a href="#" class="notification__icon"><i class="icon-bell-o"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="message__box">
+                <a class="message header__circle active icon-envelope-o" href="#">
+                  <span>5</span>
+                </a>
+                <div class="message__menu">
+                  <div class="message__item">
+                    <a href="#" class="message__image">
+                      <img src="../img/moderno/чел 3.png" alt="">
+                    </a>
+                    <div class="message__content">
+                      <a href="#" class="message__name">Kazi Fahim</a>
+                      <a href="#" class="message__help">Need WP Help!</a>
+                      <div class="message__date">01 Dec, 2016</div>
+                    </div>
+                    <a href="#" class="message__icon active"><i class="icon-envelope-o"></i></a>
+                  </div>
+                  <div class="message__item">
+                    <a href="#" class="message__image">
+                      <img src="../img/moderno/чел 4.png" alt="">
+                    </a>
+                    <div class="message__content">
+                      <a href="#" class="message__name">Richi Lenal</a>
+                      <a href="#" class="message__help">Need WP Help!</a>
+                      <div class="message__date">26 Nov, 2016</div>
+                    </div>
+                    <a href="#" class="message__icon"><i class="icon-envelope-o"></i></a>
+                  </div>
+                  <div class="message__item">
+                    <a href="#" class="message__image">
+                      <img src="../img/moderno/чел 5.png" alt="">
+                    </a>
+                    <div class="message__content">
+                      <a href="#" class="message__name">PsdBosS</a>
+                      <a href="#" class="message__help">Psd Template Help!</a>
+                      <div class="message__date">26 Nov, 2016</div>
+                    </div>
+                    <a href="#" class="message__icon"><i class="icon-mail-reply"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="basket__box">
+                <a class="basket header__circle active icon-shopping-cart" href="#">
+                  <span>855</span>
+                </a>
+                <div class="basket__menu">
+                  <div class="basket__item">
+                    <a href="#" class="basket__image">
+                      <img src="img/moderno/12.jpg" alt="">
+                    </a>
+                    <div class="basket__content">
+                      <a href="#" class="basket__title">Grand Ballet</a>
+                      <a href="#" class="basket__category">WordPress</a>
+                      <div class="basket__price">$59</div>
+                    </div>
+                  </div>
+                  <div class="basket__item">
+                    <a href="#" class="basket__image">
+                      <img src="img/moderno/11.jpg" alt="">
+                    </a>
+                    <div class="basket__content">
+                      <a href="#" class="basket__title">Apple Device</a>
+                      <a href="#" class="basket__category">WordPress</a>
+                      <div class="basket__price">$59</div>
+                    </div>
+                  </div>
+                  <div class="basket__total">
+                    <div class="total__title">Total</div>
+                    <div class="total__price">$118</div>
+                  </div>
+                  <div class="basket__btn">
+                    <a class="btn__card" href="#">Go to Cart</a>
+                    <a class="btn__checkout" href="#">Go to Checkout</a>
+                  </div>
+                </div>
+              </div>
+              <div class="user__box">
+                <a class="user active" href="#">
+                  <div class="user__inner">
+                    <div class="user__image">
+                      <img src="img/moderno/чел 2.png" alt="">
+                    </div>
+                    <div class="user__info">
+                      <div class="user__name">Mike Hussy</div>
+                      <div class="user__money">$171.00</div>
+                      <i class="icon-angle-down"></i>
+                    </div>
+                  </div>
+                </a>
+                <nav class="user__menu">
+                  <ul>
+                    <li><a href="#"><i class="icon-angle-right"></i>Profile Page</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Portfolio</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Account Setting</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Downloads</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Wishlist</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Upload Item</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Statement</a></li>
+                    <li><a href="#"><i class="icon-angle-right"></i>Withdraws</a></li>
+                  </ul>
+                </nav>
+              </div>
+              <a class="header__btn header__btn_green header__btn-ligin--on" href="#">Login</a>
+              <a class="header__btn header__btn_red header__btn-ligin--on" href="#">Register</a>
+              <a class="header__btn header__btn-logout header__btn-ligin--on" href="#">Logout</a>
             </div>
           </div>
         </div>
@@ -853,16 +991,14 @@
           </div>
         </div>
       </div>
-
-  </div>
-  <div class="footer__bottom">
-    <div class="container">
-      <div class="footer__copy">
-        © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners
+      <div class="footer__bottom">
+        <div class="container">
+          <div class="footer__copy">
+            © 2017 Foxtar market place. Trademarks and brands are the property of their respective owners
+          </div>
+        </div>
       </div>
-    </div>
-  </div>
-  </footer>
+    </footer>
   </div>
 <script src="js/jquery-3.6.0.min.js"></script>
 <script src="js/vendors.js"></script>
