--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-  <link rel="stylesheet" href="css/icomoon.css">
+  <!-- <link rel="stylesheet" href="css/icomoon.css"> -->
+  <link rel="stylesheet" href="css/icomoon1.css">
   <link rel="stylesheet" href="css/css-sprites.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Moderno</title>
