Добавлена страница settings

--- a/settings.html
+++ b/settings.html
@@ -241,7 +241,140 @@
         </div>
       </div>
     </div>
-
+    <section class="settings">
+      <div class="container">
+        <div class="settings__inner tabs">
+          <div class="settings__aside ">
+            <nav class="settings__nav">
+              <!-- собственно вкладки -->
+              <div class="settings__navitem tab__navitem1 active">Personal Information</div>
+              <div class="settings__navitem tab__navitem1">Profile</div>
+              <div class="settings__navitem tab__navitem1">Badges</div>
+              <div class="settings__navitem tab__navitem1">E-mail Settings</div>
+              <div class="settings__navitem tab__navitem1">Social Network</div>
+            </nav>
+          </div>
+          <div class="settings__items">
+            <div class="settings__item tab__item1 active">
+              <div class="settings__content">
+                <div class="settings__header">
+                  <h1>Personal Information</h1>
+                </div>
+                <form action="#">
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="fname">First Name</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="fname" name="firstname" placeholder="Ваше имя..">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="lname">Last Name</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="lname" name="lastname">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="cname">Company Name</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="fname" name="companyname">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="country">Country</label>
+                    </div>
+                    <div class="form-control-set">
+                      <select id="country" name="country">
+                        <option value="australia"><span>Select Your Country</span></option>
+                        <option value="australia">Австралия</option>
+                        <option value="canada">Канада</option>
+                        <option value="usa">США</option>
+                      </select>
+                    </div>
+                  </div>
+                  <div class=" settings__row">
+                    <div class="name">
+                      <label for="address1">Address Line 1</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="address1" name="address1">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="address2">Address Line 2</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="address2" name="address2">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="city">City</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="city" name="city">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="state">State / Province / Region</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="state" name="state">
+                    </div>
+                  </div>
+                  <div class="settings__row">
+                    <div class="name">
+                      <label for="zip">Zip / Postal Code</label>
+                    </div>
+                    <div class="form-control-set">
+                      <input type="text" id="zip" name="zip">
+                    </div>
+                  </div>
+                  <div class="row">
+                    <input type="submit" value="Update">
+                  </div>
+                </form>
+              </div>
+            </div>
+            <div class="settings__item tab__item1">
+              <div class="settings__content">
+                <div class="settings__header">
+                  <h1>Profile</h1>
+                </div>
+              </div>
+            </div>
+            <div class="settings__item tab__item1">
+              <div class="settings__content">
+                <div class="settings__header">
+                  <h1>Badges</h1>
+                </div>
+              </div>
+            </div>
+            <div class="settings__item tab__item1">
+              <div class="settings__content">
+                <div class="settings__header">
+                  <h1>E-mail Settings</h1>
+                </div>
+              </div>
+            </div>
+            <div class="settings__item tab__item1">
+              <div class="settings__content">
+                <div class="settings__header">
+                  <h1>Social Network</h1>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
     <footer class="footer">
       <div class="container">
         <div class="footer__row">
