--- a/contacts.html
+++ b/contacts.html
@@ -283,31 +283,27 @@
                     <h2>Drop Us A Message</h2>
                   </div>
                   <div class="content__form-row">
-                    <div class="form__column">
 
-                      <!-- Имя пользователя -->
-                      <div>
-                        <input class="form-control" id="name" type="text" name="name" placeholder="Name*" minlength="3"
-                          maxlength="30" required>
-                      </div>
+                    <!-- Имя пользователя -->
+                    <div class="name1">
+                      <input class="form-control" id="name" type="text" name="name" placeholder="Name*" minlength="3"
+                        maxlength="30" required>
                     </div>
-                    <div class="form__column">
 
-                      <!-- Email пользователя -->
-                      <div>
-                        <input class="form-control" id="email" type="email" name="email" required value=""
-                          placeholder="E-mail*">
-                      </div>
+                    <!-- Email пользователя -->
+                    <div class="email">
+                      <input class="form-control" id="email" type="email" name="email" required value=""
+                        placeholder="E-mail*">
                     </div>
                   </div>
                   <!-- Сообщение пользователя -->
                   <div>
-                    <textarea class="form-control-area" id="message" name="message" required placeholder="Message*"
-                      style="height:192px; width: 728px;"></textarea>
+                    <textarea class="form-control-area" id="message" name="message" required
+                      placeholder="Message*"></textarea>
                   </div>
                   <!-- Кнопка для отправки формы -->
                   <div class="submit">
-                    <button type="submit" class="btnsend">Send Message</button>
+                    <input type="submit" value="Send Message">
                   </div>
                 </div>
               </div>
